--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -28,7 +28,7 @@
         <div class="container">
     <div class="row align-items-center">
         <div class="col-lg-2 col-md-3 col-6">
-            <a href="./" class="brand-wrap">
+            <a href="{% url 'home' %}" class="brand-wrap">
                 <img class="logo" src="{% static "/images/logo.png" %}">
             </a> <!-- brand-wrap.// -->
         </div>
@@ -38,14 +38,14 @@
                     <i class="fa fa-bars"></i> Categoria
                 </button>
                 <div class="dropdown-menu">
+                    <a class="dropdown-item" href="{% url 'loja' %}">Todos</a>
                     {% for cat in opcoes %}
-                    <a class="dropdown-item" href="#">{{cat.categoria_nome}}</a>
-                    
+                    <a class="dropdown-item" href="{{ cat.get_url }}">{{cat.categoria_nome}}</a>
                      {% endfor %}
                 </div>
             </div>  <!-- category-wrap.// -->
         </div> <!-- col.// -->
-        <a href="./store.html" class="btn btn-outline-primary">Store</a>
+        <a href="{% url 'loja' %}" class="btn btn-outline-primary">Store</a>
         <div class="col-lg  col-md-6 col-sm-12 col">
             <form action="#" class="search">
                 <div class="input-group w-100">
