--- a/templates/loja/loja.html
+++ b/templates/loja/loja.html
@@ -27,7 +27,7 @@
                     <h6 class="title">Categories</h6>
                 </a>
             </header>
-            <div class="filter-content collapse show" id="collapse_1" style="">
+            <div class="filter-content collapse show" id="collapse_1">
                 <div class="card-body">
                     
                     <ul class="list-menu">
@@ -49,7 +49,7 @@
                     <h6 class="title">Price range </h6>
                 </a>
             </header>
-            <div class="filter-content collapse show" id="collapse_3" style="">
+            <div class="filter-content collapse show" id="collapse_3">
                 <div class="card-body">
                     
                     <div class="form-row">
@@ -110,13 +110,13 @@
                 </div> <!-- img-wrap.// -->
                 <figcaption class="info-wrap">
                     <div class="fix-height">
-                        <a href="./product-detail.html" class="title">{{prod.produto_nome}}</a>
+                        <a href="./produto_detalhe.html" class="title">{{prod.produto_nome}}</a>
                         <div class="price-wrap mt-2">
                             <span class="price">{{ prod.preco }}</span>
                             <del class="price-old">{{ prod.preco }}</del>
                         </div> <!-- price-wrap.// -->
                     </div>
-                    <a href="#" class="btn btn-block btn-success">Added to cart </a>
+                    <a href="{% url 'carrinho' %}" class="btn btn-block btn-success">Added to cart </a>
                 </figcaption>
             </figure>
         </div> <!-- col.// -->
