--- a/templates/produto_detalhe.html
+++ b/templates/produto_detalhe.html
@@ -69,7 +69,7 @@
             </div>
         </div> <!-- row.// -->
         <hr>
-        <a href="{% url 'carrinho' %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
+        <a href="{% url 'adicionarCarrinho' produto.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
     </article> <!-- product-info-aside .// -->
             </main> <!-- col.// -->
         </div> <!-- row.// -->
